spring/product-inventory/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
            - name: DB_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: my-database-secret
                   key: user
            - name: DB_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: my-database-secret
                   key: password
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
            - name: SSO_REALM
              valueFrom:
                 configMapKeyRef:
                   name: keycloak-properties
                   key: realm
            - name: SSO_RESOURCE
              valueFrom:
                 configMapKeyRef:
                   name: keycloak-properties
                   key: resource
            - name: SSO_REALM_KEY
              valueFrom:
                 configMapKeyRef:
                   name: keycloak-properties
                   key: realm-key
            - name: SSO_AUTH_SERVER_URL
              valueFrom:
                 configMapKeyRef:
                   name: keycloak-properties
                   key: auth-server-url
            - name: SSO_CREDENTIALS_SECRET
              valueFrom:
                 configMapKeyRef:
                   name: keycloak-properties
                   key: credentails-secret
