spring/product-inventory/src/main/fabric8/deploymentconfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: product-inventory
spec:
  triggers:
    -
      type: ConfigChange
    -
      type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - product-inventory
        from:
          kind: ImageStreamTag
          namespace: product
          name: 'product-inventory:latest'
  replicas: 1
  template:
    metadata:
      labels:
        app: product-inventory      
    spec:
      containers:
        - name: product-inventory
          image: "product/product-inventory:latest"
          imagePullPolicy: Always
          volumeMounts:
          - name: keystore-volume
            mountPath: /var/run/secrets/java.io/keystores            
      volumes:
      - name: keystore-volume
        emptyDir: {}
