spring/product-inventory/src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-inventory
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: product-inventory
