spring/product-inventory/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: product-inventory
spec:
  port:
    targetPort: 8090
  to:
    kind: Service
    name: product-inventory
  tls:
    termination: edge
